--- a/BurgerSample/BurgerSample/MenuCell.xib
+++ b/BurgerSample/BurgerSample/MenuCell.xib
@@ -10,7 +10,7 @@
         <tableViewCell contentMode="scaleToFill" restorationIdentifier="CELL" selectionStyle="default" indentationWidth="10" reuseIdentifier="CELL" rowHeight="125" id="KGk-i7-Jjw" customClass="MenuCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="125"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
