--- a/pickerandtextfield/pickerandtextfield/Base.lproj/Main.storyboard
+++ b/pickerandtextfield/pickerandtextfield/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6205" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6198"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -41,6 +42,15 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F3Q-qj-rCT">
+                                <rect key="frame" x="225" y="392" width="151" height="108"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="photoButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oSn-7U-k2s"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -48,6 +58,10 @@
                             <constraint firstItem="skd-Dt-Eaa" firstAttribute="top" secondItem="TPA-Gf-kwF" secondAttribute="bottom" constant="8" id="2cm-Bo-Nzk"/>
                             <constraint firstAttribute="centerX" secondItem="TPA-Gf-kwF" secondAttribute="centerX" id="4uQ-5D-MMR"/>
                             <constraint firstAttribute="centerX" secondItem="skd-Dt-Eaa" secondAttribute="centerX" id="ICx-Bq-Szk"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="F3Q-qj-rCT" secondAttribute="trailing" constant="208" id="Qy7-Cq-6tV"/>
+                            <constraint firstItem="F3Q-qj-rCT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="209" id="gcA-ed-kfL"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="F3Q-qj-rCT" secondAttribute="bottom" constant="100" id="hPB-K7-wRq"/>
+                            <constraint firstItem="F3Q-qj-rCT" firstAttribute="top" secondItem="skd-Dt-Eaa" secondAttribute="bottom" constant="97" id="io5-te-3Nl"/>
                             <constraint firstItem="TPA-Gf-kwF" firstAttribute="top" secondItem="a3M-iB-jNW" secondAttribute="bottom" constant="8" id="rrR-Ix-85w"/>
                             <constraint firstAttribute="centerX" secondItem="a3M-iB-jNW" secondAttribute="centerX" id="yU5-Lm-aB8"/>
                         </constraints>
